CHANGES IN VERSION 1.11.1
=========================
* Bug fix for duplicate MSP spectra when not using metadata table

CHANGES IN VERSION 1.11.0
=========================
* Bioconductor dev (automatic version bump)

CHANGES IN VERSION 1.10.0
=========================
* Bioconductor release (automatic version bump)

CHANGES IN VERSION 1.9.12
=========================
* Troublshoot mac "[MSData::Spectrum::getMZIntensityPairs()] Sizes do not match" error

CHANGES IN VERSION 1.9.11
=========================
* Bug fix for createMSP - now handles metada with duplicate grpids

CHANGES IN VERSION 1.9.10
=========================
* Documentation updates

CHANGES IN VERSION 1.9.9
=========================
* NEW FUNCTION: createDatabase
    + Updated version of create_database that uses an updated schema
* NEW FUNCTION: spectralMatching
    + Updated version spectral_matching that allows for more flexibility
* Vigenettes and documentation update

CHANGES IN VERSION 1.9.8
=========================
* NEW FUNCTION: filterFragSpectra (for purityA objects)
    + LC-MS/MS filtering of spectra (prior to averaging)
* NEW FUNCTIONS: averageIntraFragSpectra, averageInterFragSpectra, averageAllFragSpectra (for purityA objects)
    + LC-MS/MS averaging and filtering functionality
* NEW FUNCTION: createMSP
    + Create msp files from purityA objects where XCMS features have been linked to fragmentation spectra
* Updated create_database and spectral matching to have the option to use averaged fragmentation spectra

CHANGES IN VERSION 1.9.2
=========================
* Bug fix for groupPeaks and groupPeaksEx (the ppm argument was not working and there was inconsistent behaviour with larger datasets). Thanks to Elliot for spotting (https://github.com/litepalmer)
* Updated documentation for spectral matching

CHANGES IN VERSION 1.7.6
=========================
* create_sql bug fix for msms spectra table. Was crashing due to incorrect ordering.