@@ -1,6 +1,7 @@
 CHANGES IN VERSION 1.11.1
 =========================
 * Bug fix for duplicate MSP spectra when not using metadata table
+* Added xcms3 to xcmsSet conversion for "create database" code
 
 CHANGES IN VERSION 1.11.0
 =========================
